# ot-harjoitustyo

./: .pylintrc  README.md  README.txt  pyproject.toml  tasks.py
documentation/: vaatimusmaarittely.md
dokumentaatio/: Kayttoohje.md  arkkitehtuuri.md  changelog.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
src/: index.py
src/data/: default_stats.json
src/objects/: enemy.py  experience.py  player.py  projectile.py
src/repositories/: data_handler.py  score_handler.py  weapons.py
src/services/: level_handler.py  main_loop.py  randomizer.py  stage.py  wave_handler.py
src/tests/: enemy_test.py  experience_test.py  level_handler_test.py  main_loop_test.py  player_test.py  projectile_test.py  randomizer_test.py  score_handler_test.py  stage_test.py  wave_handler_test.py  weapons_test.py
src/ui/: game_field.py  level_menu.py  main_menu.py
