[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = "Ohjelmistotekniikan harjoitustyö"
authors = ["Teetil <teemutil@gmail.com>"]
readme = "README.md"
packages = [{include = "ot_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pygame = "^2.1.2"
coverage = "^6.5.0"
pylint = "^2.15.6"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
